<resources>
    <string name="was_ist_aplan">Was ist A-Plan?</string>
    <string name="datenbank">Datenbank, Sicherheit, Zugriffsrechte</string>
    <string name="dashboard">Dashboard</string>
    <string name="gantt_chart">Gantt-Diagramm</string>
    <string name="demo_beta_version">Demo-/Beta-Version</string>
    <string name="konsten">Kosten</string>
    <string name="ausblick">Ausblick</string>
    <string name="dont_show_it_again">Don\'t show it again</string>
    <string name="first_screen">A-Plan ist eine Projektmanagement-Software zur Verwaltung von Projekten und Ressourcen. Mit der App können die aktuellen Planungen auf einem Tablett bzw. Smartphone dargestellt werden. Die Planungen werden mit der Desktop-Version von A-Plan erstellt(siehe www.braintool.com) und auf einem SQL-Server innerhalb Ihres Firmennetzwerkes gespeichert.</string>
    <string name="second_screen">Ihre Daten werden mit den höchsten aktuellen Sicherheitsstandards direkt von Ihrer firmeneigenen SQL-Datenbank zur App übertragen und werden zu keiner Zeit auf einem externen Server gespeichert oder gehostet. Hierdurch ist zudem gewährleistet, dass in der App immer der aktuelle Planungsstand angezeigt wird.
        \n\nDie User der App melden sich mit ihrem Namen und Kennwort bei der App an und haben dann Zugriff auf die für sie freigegebenen Daten. Diese umfassen lediglich die Projekte, für die sie innerhalb der Desktop-Version von A-Plan freigeschaltet wurden.
    </string>
    <string name="third_screen">Die A-Plan-App zeigt auf einem Dashboard die aktuell zur Bearbeitung anstehenden Projekte / Vorgänge an, wobei diese durch das Setzen von Filtern beliebig eingeschränkt werden können. </string>
    <string name="fourth_screen">In einem Ganttdiagramm wird der zeitliche Ablauf der betroffenen Projekte angezeigt. Auch hier werden nur die für den angemeldeten User freigegebenen Umfänge angezeigt und diese können ebenfalls durch umfangreiche Filter- und Einstellmöglichkeiten angepasst werden. </string>
    <string name="fifth_screen">Bitte beachten Sie, dass diese Beta-Version nur eine begrenzte Laufzeit hat. Sie werden aber vor der Beendigung der Beta-Phase bzw. bei Vorliegen neuer Releases etc. automatisch benachrichtigt.\n\nHinweise auf Fehler bzw. Verbesserungsvorschläge können Sie uns über das Menü „Einstellungen“ / „Support“ zukommen lassen.
    </string>
    <string name="Sixth_screen">Für die offizielle App, die voraussichtlich Anfang 2017 zur Verfügung stehen wird, fallen pro User monatliche bzw. jährliche Kosten an, deren Höhe noch nicht exakt festgelegt wurde. Die User werden innerhalb der Desktop-Version von A-Plan verwaltet.</string>
    <string name="seven_screen">In Kürze wird auch eine Android-Version der A-Plan App zur Verfügung stehen.
        Als Erweiterung der aktuellen Version ist die Darstellung von Vorgängen pro Ressource und die Auslastung von Ressourcen vorgesehen (analog der Ressourcendarstellung der Desktop-Version).\n\n
        Die nächste Version der App wird dann auch die Möglichkeit der Dateneingabe beinhalten. Hierbei wird es sich in erster Linie um Ablauf- bzw. Statusänderungen oder das Hinzufügen von Notizen etc. handeln. Das Ändern von Projektstrukturen oder das Anlegen neuer Projekte wird zunächst noch der Desktop-Version vorbehalten bleiben.
    </string>
    <string name="my_smsc_link"><a href="http://www.smacsoftwares.de/">Powered by: SMAC Software &amp; Services</a></string>
    <string name="login_header">A-Plan App - Sign In</string>
    <string name="sign_in_button">Sign In</string>
    <string name="user_name">User Name:</string>
    <string name="password">Password:</string>
    <string name="forgott_password">Forgot Password?</string>
    <string name="Login">Login</string>
    <string name="admin_header">User Detail</string>
    <string name="name_label">Name:</string>
    <string name="email">E-Mail:</string>
    <string name="companyname">Company Name:</string>
    <string name="organizationId">Organisation-Id:</string>
    <string name="newsletter">Newsletter:</string>
    <string name="hasLicense">Has License?</string>
    <string name="demo_user">DemoUser</string>
    <string name="err_msg_name">Enter your full name</string>
    <string name="err_msg_email">Enter valid email address</string>
    <string name="err_msg_password">Enter the password</string>
    <string name="hint_name">Name</string>
    <string name="sign_up">Sign Up</string>
    <string name="changepassword">Change Password?</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>
    <string name="dashboard_header">Dashboard</string>
    <string name="dashboard_footer">Dashboard</string>
    <string name="project_footer">Project</string>
    <string name="filter_footer">General Filter</string>
    <string name="setting_footer">Setting</string>
    <string name="search">Search</string>
    <string name="load">Load</string>
    <string name="sunday">Sun</string>
    <string name="Monday">Mon</string>
    <string name="tusday">Tue</string>
    <string name="wed">Wed</string>
    <string name="thu">Thu</string>
    <string name="fri">Fri</string>
    <string name="sat">Sat</string>
    <string name="finish_date">Finish Date</string>
    <string name="selected_date">Select Date</string>
    <string name="task_assign_tree">Task Started</string>
    <string name="task_completed_next_five_day">Task to complete in 1 week</string>
    <string name="task_completed_today_tree">Task to complete today</string>
    <string name="task_completed_tree">Task Complete</string>
    <string name="task_pending_tree">Task Pending</string>
    <string name="no_more_data_to_load">No more data to load</string>
    <string name="no_more_data_to_load_0_0">0/0 No more data to load</string>
    <string name="load_more_data">Load more</string>
    <string name="no_more_data_to_load_static">No more data to load</string>
    <string name="no_more_data_to_load_0_0_static">0/0 No more data to load</string>
    <string name="load_more_data_static">Load more</string>
    <string name="project_header">Project</string>
    <string name="Status">Status</string>
    <string name="TrafficLights">Traffic Lights</string>
    <string name="Default_profile">Default Profile</string>
    <string name="date">Date</string>
    <string name="status">Status</string>
    <string name="weekm">Week M</string>
    <string name="set_resolution">Set Resolution</string>
    <string name="year">Year</string>
    <string name="quarter">Quarter</string>
    <string name="week_s">Week S</string>
    <string name="week_m">Week M</string>
    <string name="week_l">Week L</string>
    <string name="hours">Hours</string>
    <string name="minutes">Minutes</string>
    <string name="seconds">Seconds</string>
    <string name="daynightshift">DayNightShift</string>
    <string name="delete_profile">Delete Profile</string>
    <string name="are_you_sure_to_delete_profile">Are you sure you want to Delete profile?</string>
    <string name="add_new_profile">Add New Profile</string>
    <string name="profile_name">Profile Name</string>
    <string name="filter_setted">Filter setted</string>
    <string name="filter_setted_message">Do you want to proceed</string>
    <string name="Delete_profile">Delete Profile</string>
    <string name="today">Today</string>
    <string name="text">Text</string>
    <string name="Number">Number</string>
    <string name="completion_overrun">Completion Overrun</string>
    <string name="started_project_task">Started tasks</string>
    <string name="complete_project_task">Complete tasks</string>
    <string name="complete_today">Complete today</string>
    <string name="pending_project_task">Pending tasks</string>
    <string name="passive_project_task">Passive Project/tasks</string>
    <string name="completed_in1week">Completed in 1 week</string>
    <string name="task_without_date">Task Without date[s]</string>
    <string name="canceled_project_task">Canceled project/tasks</string>
    <string name="notice_arrow">Notice arrow</string>
    <string name="reshow">Reshow</string>
    <string name="limit_overrun">Limit overrun</string>
    <string name="critical">Critical</string>
    <string name="requiring_clarification">Requiring clarification</string>
    <string name="not_clear">Not Clear</string>
    <string name="reminder">Reminder</string>
    <string name="completed_task">Completed tasks</string>
    <string name="limit">Limit</string>
    <string name="capacity_too_high">Capacity too high</string>
    <string name="capacity_too_low">Capacity too low</string>
    <string name="traffic_yellow">Yellow</string>
    <string name="traffic_red">Red</string>
    <string name="traffic_green">Green</string>
    <string name="resource_header">Resource</string>
    <string name="filter_header">Filter</string>
    <string name="general_filter_folder_text">General Filter - Folder</string>
    <string name="general_filter_text_text">General Filter - Text</string>
    <string name="general_filter_date_text">General Filter - Date</string>
    <string name="general_filter_user_defined_text">General Filter - User def. Fields</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <string name="default_string">Default</string>
    <string name="edit">Edit</string>
    <string name="send">Send</string>
    <string name="support">Support</string>
    <string name="profile">Profile</string>
    <string name="set_profile">Set Profile</string>
    <string name="table">Table</string>
    <string name="submit_error_log">Submit error log</string>
    <string name="sign_out">Sign Out</string>
    <string name="sign_out_organization">Sign Out From Organization</string>
    <string name="profile_default">Profile:Default</string>
    <string name="sign_out_message">Are you sure?</string>
    <string name="Table">Table</string>
    <string name="title_profile">Profile</string>
    <string name="title_option">Options</string>
    <string name="title_ganttchart">Gantt Chart</string>
    <string name="show_all_subtask">Show All Subtasks</string>
    <string name="do_not_show_all_project">Do not show completed projects</string>
    <string name="text_filter_title">Text Filter</string>
    <string name="filterfolder_title">FolderFilter</string>
    <string name="filterText_header">Text Filter</string>
    <string name="anytextfiled">Any Text Filed</string>
    <string name="prio">Prio</string>
    <string name="to">To</string>
    <string name="leaveto">Leve To</string>
    <string name="identno">Ident-No</string>
    <string name="task">Task</string>
    <string name="client">Client</string>
    <string name="responsible">Responsible</string>
    <string name="group">Group</string>
    <string name="resources">Resource</string>
    <string name="date_filter_title">Date Filter</string>
    <string name="criteria1">Criterion 1</string>
    <string name="name">Name</string>
    <string name="show">Show</string>
    <string name="width">Width</string>
    <string name="releseNo">Release No:</string>
    <string name="sqlversion">Sql-Version:</string>
    <string name="licence">Licence:</string>
    <string name="webviewer">Web viewer:</string>
    <string name="licensedto">Licensed To:</string>
    <string name="aplan">A-Plan 2017</string>
    <string name="version">Version 1.1.6</string>
    <string name="na">N/A</string>
    <string name="demouser">Demo User</string>
    <string name="copyright">CopyRight @ 1996 - 2017 barintool Software gmbh </string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="submit">Submit</string>
    <string name="app_name">A-Plan</string>
    <string name="Continue">Continue</string>
    <string name="url">Please enter valid organisation url.</string>
    <string name="organization">Organisation url</string>
</resources>