<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linear_about_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_color"
    android:orientation="vertical">

    <ImageView
        android:layout_marginLeft="@dimen/twentee_sp"
        android:layout_marginRight="@dimen/twentee_sp"
        android:layout_width="match_parent"
        android:layout_height="@dimen/seventee_sp"
        android:layout_marginTop="@dimen/five_sp"
        android:layout_marginBottom="@dimen/five_sp"
        android:src="@drawable/aboutlogo" />

    <ImageView
        android:layout_width="@dimen/hundred_eightee_sp"
        android:layout_height="@dimen/hundred_sp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/ten_sp"
        android:src="@drawable/app_logo" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/twentee_sp"
                android:orientation="horizontal"
                android:weightSum="100">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="50"
                    android:gravity="right"
                    android:text="@string/releseNo"
                    android:textSize="@dimen/thirteen_sp" />

                <TextView
                    android:id="@+id/textview_version_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/ten_sp"
                    android:layout_weight="50"
                    android:text="@string/version"
                    android:textSize="@dimen/thirteen_sp" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/releseno"
                android:layout_marginTop="@dimen/fifteen_sp"
                android:orientation="horizontal"
                android:weightSum="100">

                <TextView

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="50"
                    android:gravity="right"
                    android:text="@string/sqlversion"
                    android:textSize="@dimen/thirteen_sp" />

                <TextView
                    android:id="@+id/textview_sql_version"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/ten_sp"
                    android:layout_weight="50"
                    android:text="@string/na"
                    android:textSize="@dimen/thirteen_sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/fifteen_sp"
                android:orientation="horizontal"
                android:weightSum="100">

                <TextView

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="50"
                    android:gravity="right"
                    android:text="@string/licence"
                    android:textSize="@dimen/thirteen_sp" />

                <TextView
                    android:id="@+id/textview_licence"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/ten_sp"
                    android:layout_weight="50"
                    android:text="@string/na"
                    android:textSize="@dimen/thirteen_sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/fifteen_sp"
                android:orientation="horizontal"
                android:weightSum="100">

                <TextView

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="50"
                    android:gravity="right"
                    android:text="@string/webviewer"
                    android:textSize="@dimen/thirteen_sp" />

                <TextView
                    android:id="@+id/textview_web_viewer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/ten_sp"
                    android:layout_weight="50"
                    android:text="@string/na"
                    android:textSize="@dimen/thirteen_sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/fifteen_sp"
                android:orientation="horizontal"
                android:weightSum="100">

                <TextView
                    android:id="@+id/textview_licence_to"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="50"
                    android:gravity="right"
                    android:text="@string/licensedto"
                    android:textSize="@dimen/thirteen_sp" />

                <TextView

                    android:id="@+id/txt_demouser"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/ten_sp"
                    android:layout_weight="50"
                    android:text="@string/demouser"
                    android:textSize="@dimen/thirteen_sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/fifteen_sp"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/aplan"
                    android:textColor="@color/red"
                    android:textSize="@dimen/seventeen_sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/fifteen_sp"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/copyright"
                    android:textColor="@color/calendar_text_active"
                    android:textSize="@dimen/twelve_sp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>