<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
                android:id="@+id/linear_sign_out_main"
              android:background="@drawable/popup_background"
              android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/twentee_sp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/sign_out"
            android:textColor="@color/red"
            android:textSize="@dimen/twentee_five_sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/twentee_five_sp"
            android:gravity="center_horizontal"
            android:text="@string/sign_out_message"
            android:textColor="@color/black"
            android:textSize="@dimen/seventeen_sp" />


    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1sp"
        android:layout_marginTop="@dimen/twentee_five_sp"
        android:background="@color/grey_dashboard" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/sixtee_sp"
        android:orientation="horizontal">

        <TextView
            android:background="@drawable/textview_custom_popup_background"
            android:id="@+id/yes"
            android:layout_width="0sp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/yes"
            android:textColor="@color/textview_presseffect"
            android:textSize="@dimen/eighteen_sp" />

        <View
            android:layout_width=".5sp"
            android:layout_height="wrap_content"
            android:background="@color/grey_dashboard"/>

        <TextView
            android:background="@drawable/textview_custom_pupup_background2"
            android:id="@+id/No"
            android:layout_width="0sp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/no"
            android:textColor="@color/textview_presseffect"
            android:textSize="@dimen/eighteen_sp" />
    </LinearLayout>
</LinearLayout>




