<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center_horizontal"
              android:orientation="vertical"
              tools:context="de.smacsoftwares.aplanapp.fragment.FragmentChangePassword">

    <!-- TODO: Update blank fragment layout -->
    <EditText
        android:lines="1"
        android:id="@+id/edittextoldpsss"
        android:layout_width="match_parent"
        android:layout_height="@dimen/fiftee_sp"
        android:layout_margin="@dimen/fiftee_sp"
        android:background="@drawable/rounded_rectangle_white"
        android:hint="@string/old_password"
        android:inputType="textPassword"
        android:paddingLeft="@dimen/twentee_sp"
        android:textColorHint="@color/textview_color_grey"
        android:textSize="@dimen/twentee_five_sp"/>

    <EditText
        android:lines="1"
        android:id="@+id/edittextnewpsss"
        android:layout_width="match_parent"
        android:layout_height="@dimen/fiftee_sp"
        android:layout_margin="@dimen/fiftee_sp"
        android:background="@drawable/rounded_rectangle_white"
        android:hint="@string/new_password"
        android:paddingLeft="@dimen/twentee_sp"
        android:inputType="textPassword"
        android:textColorHint="@color/textview_color_grey"
        android:textSize="@dimen/twentee_five_sp"/>

    <Button
        android:id="@+id/btnsubmit"
        android:layout_width="@dimen/two_hundred"
        android:layout_height="@dimen/fiftee_sp"
        android:layout_marginTop="@dimen/fourtee_sp"
        android:background="@drawable/button_background"
        android:text="@string/submit"
        android:textAllCaps="false"
        android:textColor="@color/white_color"
        android:textSize="@dimen/button_textsize"/>

</LinearLayout>
