<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android" >
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/constraintLayout"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:layout_height="match_parent">
    <!--start for header-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/fiftee_sp"
        android:background="@color/header_color"
        tools:layout_editor_absoluteX="0dp">

        <ImageView
            android:layout_marginLeft="20dp"
            android:layout_centerVertical="true"
            android:id="@+id/imgback"
            android:layout_width="@dimen/twentee_sp"
            android:layout_height="@dimen/twentee_sp"
            android:src="@drawable/back_button_selector"/>
        <TextView
            android:id="@+id/textview_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/app_name"
            android:textColor="@color/red"
            android:textSize="@dimen/header_textsize" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1sp"
            android:layout_alignParentBottom="true"
            android:background="#000" />

    </RelativeLayout>
    <!--end for header-->
    <!-- for language-->
    <RelativeLayout
        android:layout_marginTop="@dimen/twentee_sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/img_english"
            android:layout_width="@dimen/thirtee_five"
            android:layout_marginRight="@dimen/twentee_sp"
            android:layout_height="@dimen/thirtee_sp"
            android:layout_toLeftOf="@+id/img_germany"/>

        <ImageView
            android:layout_marginRight="@dimen/twentee_sp"
            android:layout_alignParentRight="true"
            android:id="@+id/img_germany"
            android:layout_width="@dimen/thirtee_five"
            android:layout_height="@dimen/thirtee_sp"
            />
    </RelativeLayout>

    <!-- end for language-->
    <ImageView
        android:layout_marginTop="@dimen/twentee_sp"
        android:scaleType="fitCenter"
        android:layout_width="@dimen/hundred_sp"
        android:layout_height="@dimen/hundred_sp"
        android:src="@drawable/app_logo"
        />
    <TextView
        android:layout_marginTop="@dimen/twentee_sp"
        android:gravity="left|center_vertical"
        android:textColor="@color/black"
        android:textSize="@dimen/twentee_sp"
        android:id="@+id/lable_organization"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/organization"
        android:layout_marginStart="@dimen/twentee_sp"
        android:layout_marginEnd="@dimen/twentee_sp"/>
    <EditText
        android:id="@+id/edittext_url"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text=""
        android:textSize="@dimen/thirteen_sp"
        android:hint="@string/url"
        android:layout_marginStart="@dimen/twentee_sp"
        android:layout_marginEnd="@dimen/twentee_sp"
        android:layout_marginTop="@dimen/twentee_sp"
        android:padding="@dimen/fifteen_sp"
        android:background="@drawable/rounded_rectangle_white"
        />
    <RelativeLayout
        android:background="@drawable/button_icon"
        android:layout_height="@dimen/fiftee_sp"
        android:layout_width="match_parent"
        android:layout_marginLeft="@dimen/eighteen_sp"
        android:layout_marginRight="@dimen/eighteen_sp"
        android:layout_marginTop="@dimen/fiftee_sp">
    <Button
        android:background="@color/caldroid_transparent"
        android:id="@+id/btn_continue"
        android:text="@string/Continue"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textAllCaps="false"
        android:textColor="@color/white_color"
        android:textSize="@dimen/button_text_size" />
        <ImageView
            android:scaleType="fitStart"
            android:layout_centerVertical="true"
            android:id="@+id/img"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/button_arrow"/>
    </RelativeLayout>

</LinearLayout>
        <TextView
        android:id="@+id/txt_ssoft_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/fifteen_sp"
        android:text="@string/my_smsc_link"
        android:textSize="@dimen/fifteen_sp"/>
     </RelativeLayout>